# DataStr

./: display_stack.py  pop_from_stack.py  push_to_stack.py  pyproject.toml  setup.cfg  test.py
src/DataStr.egg-info/: PKG-INFO  SOURCES.txt
src/datastr/: DataStr.py
