[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "DataStr"
version = "1.0.0"
authors = [
  { name="Prithwis Das", email="prithwisdas3333@gmail.com" },
]
description = "DataStr is a module which allows conventional operations on stacks and queues to be performed with minimal code."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Prithwis-2023/datastr"
